Rename endpoint /btc -> /btc-rpc
